--- a/jux-does-tech/src/style.css
+++ b/jux-does-tech/src/style.css
@@ -318,9 +318,31 @@ a:focus {
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.09), 0 4px 2px rgba(0, 0, 0, 0.09),
     0 8px 4px rgba(0, 0, 0, 0.09), 0 16px 8px rgba(0, 0, 0, 0.09),
     0 32px 16px rgba(0, 0, 0, 0.09);
+  background-color: #fff;
 }
 .card > :first-child {
   margin-top: 0;
+}
+
+.background-tile-gr {
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to left, rgb(153, 255, 192) 0%, rgb(80, 240, 80) 100%)
+    repeat scroll 0% 0%;
+}
+.background-tile-tr {
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to left, rgb(163, 255, 227) 0%, rgb(70, 231, 218) 100%)
+    repeat scroll 0% 0%;
+}
+.background-tile-white {
+  background-color: #fff;
+  clip-path: polygon(0px 2.79%, 99.95% 9.23%, 100.05% 102.71%, 2px 102.68%);
+}
+.background-tile-left {
+  clip-path: polygon(0 2.79%, 99.9% 10.27%, 99.75% 67.44%, 0 85.86%);
+}
+.background-tile-right {
+  clip-path: polygon(0 7.7%, 100% 1.19%, 100% 91.4%, 0px 85.56%);
 }
 
 .section {
@@ -328,7 +350,6 @@ a:focus {
   margin-bottom: var(--spacing-16);
   padding-bottom: 1em;
   font-family: Sans-Serif;
-  background-color: #fff;
 
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-4xl);
