--- a/jux-does-tech/src/style.css
+++ b/jux-does-tech/src/style.css
@@ -27,8 +27,9 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  /* TODO: used to be Montserrat */
+  --fontFamily-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
     Times, serif;
@@ -331,7 +332,12 @@ pre[class*="language-"] {
 .card > :first-child {
   margin-top: 0;
 }
-
+.animated-header {
+  position: absolute;
+}
+.background-tile-sticky {
+  height: 150vh !important;
+}
 .background-tile-gr {
   background: rgba(0, 0, 0, 0)
     linear-gradient(to left, rgb(153, 255, 192) 0%, rgb(80, 240, 80) 100%)
@@ -359,22 +365,58 @@ pre[class*="language-"] {
   padding-bottom: 1em;
   font-family: Sans-Serif;
 
-  margin: var(--spacing-0) auto;
+  margin: var(--spacing-10) auto;
   max-width: var(--maxWidth-4xl);
   padding: var(--spacing-10) var(--spacing-10);
+}
+.scroll-indicator:hover {
+  fill: white;
+  cursor: pointer;
+}
+.button {
+  background-color: transparent;
+  color: white;
+  padding: 1em;
+  border: 3px solid black;
+  border-radius: 2px;
+}
+.intro {
+  color: var(--color-accent);
+}
+.intro-image {
+  float: left;
+}
+.intro-image img {
+  border-radius: 50%;
+  width: 10rem;
+  margin: var(--spacing-10);
+}
+.intro h1 {
+  font-size: 4rem;
+  margin: var(--spacing-2);
+}
+.intro h2 {
+  color: white;
+  font-size: 2rem;
+  margin: var(--spacing-2);
+}
+.intro div {
+  font-family: var(--fontFamily-serif);
+}
+.intro strong {
+  color: #3effff;
+  font-size: 4rem;
 }
 .bio {
   display: block;
   margin-bottom: var(--spacing-16);
   padding-bottom: 1em;
   font-family: Sans-Serif;
-  background-color: #fff;
 
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
   padding: var(--spacing-10) var(--spacing-5);
 }
-
 .bio p {
   margin-bottom: var(--spacing-0);
 }
@@ -457,6 +499,45 @@ pre[class*="language-"] {
 .blog-post section h5,
 .blog-post section h6 {
   color: var(--color-primary);
+}
+
+.parallax-main div {
+  overflow: visible !important;
+}
+
+.main-nav {
+  float: left;
+  position: absolute;
+  z-index: 100;
+  width: 100vw;
+  bottom: 0;
+  text-align: center;
+  background-color: #212329;
+  border-top: 4px solid var(--color-primary);
+  -webkit-box-shadow: 0px 0px 20px 1px #000000;
+  box-shadow: 0px 0px 20px 1px #000000;
+  font-size: var(--fontSize-2);
+  /* backdrop-filter: blur(4px); */
+}
+.main-nav ul {
+  margin: var(--spacing-2);
+}
+.main-nav li {
+  display: inline;
+  margin: var(--spacing-4);
+}
+.main-nav a {
+  color: var(--color-accent);
+  font-family: var(--fontFamily-sans);
+  text-decoration: none;
+}
+.main-nav a:hover,
+.main-nav a:focus {
+  color: var(--color-primary);
+}
+
+.main-nav a:active {
+  color: var(--color-text-light);
 }
 
 /* Media queries */
